--- a/.github/workflows/hugo-deploy.yml
+++ b/.github/workflows/hugo-deploy.yml
@@ -31,7 +31,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: "0.124.1" # Update Hugo version to a newer one
+      HUGO_VERSION: "0.145.0" # Update Hugo version to match local version
     steps:
       - name: Install Hugo CLI
         run: |
